ATÃLAS-1374: fixed api read filter bugs